--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,11 +33,18 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/obj)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/obj)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/obj)
 
+file(GLOB SRC_FILES_PY "src/*_py.cpp")
+
 file(GLOB SRC_FILES "src/*.cpp")
+set(SRC_STATIC ${SRC_FILES})
+list(FILTER SRC_STATIC EXCLUDE REGEX ".*_py\\.cpp$")
+list(FILTER SRC_STATIC EXCLUDE REGEX ".*python_submodule\\.cpp$")
 
 add_compile_options(-Wall -O3 -march=native )
 
-add_library(${LIB_NAME} ${SRC_FILES})
+add_library(${LIB_NAME}_py ${SRC_FILES})        #shared library (i.e. the python library)
+set_target_properties(${LIB_NAME}_py PROPERTIES OUTPUT_NAME ${LIB_NAME})        #shared library (i.e. the python library)
+add_library(${LIB_NAME} STATIC ${SRC_STATIC}) #static library (i.e. to import in other c++ projects)
 include(config.cmake) # sets IS_MINGW,PY_INCL,SHARED_LIB_PREFIX,SHARED_LIB_SUFFIX and updates LINKS
 
 #compile includes
@@ -45,8 +52,10 @@ include_directories(${PY_INCL})           # pybind11 includes
 include_directories(${EXTERNAL_INCLUDES})
 
 #linking 
+set_target_properties(${LIB_NAME}_py PROPERTIES PREFIX "${SHARED_LIB_PREFIX}")
+set_target_properties(${LIB_NAME}_py PROPERTIES SUFFIX ${SHARED_LIB_SUFFIX})
+target_link_libraries(${LIB_NAME}_py ${DEPENDS_ON_GIT_VERSION} ${LINKS})
 set_target_properties(${LIB_NAME} PROPERTIES PREFIX "${SHARED_LIB_PREFIX}")
-set_target_properties(${LIB_NAME} PROPERTIES SUFFIX ${SHARED_LIB_SUFFIX})
 target_link_libraries(${LIB_NAME} ${LINKS})
 
 
