CMakeLists add install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,4 +60,9 @@ target_link_libraries(${LIB_NAME}_py ${LINKS})
 set_target_properties(${LIB_NAME} PROPERTIES PREFIX "${SHARED_LIB_PREFIX}")
 target_link_libraries(${LIB_NAME} ${LINKS})
 
+message(STATUS "Installing FFTW_extra")
+install(DIRECTORY ${PROJECT_SOURCE_DIR}/obj/ DESTINATION ${PROJECT_SOURCE_DIR}/ FILES_MATCHING PATTERN "*.pyd" PATTERN "*.so")
+
+
+
 
